<resources>
    <string name="app_name">PrototypeNavigator</string>
    <string name="title_route_detail">Route Detail</string>
    <string name="tvWelcome">pnpn!</string>
    <string name="btnLoadNewRoute">Ladda ny rutt</string>
    <string name="btnLoadPreRoute">Välj rutt</string>

    /* menu */
    <string name="startStopDemo">Starta/Stoppa Demo</string>
</resources>
