<?xml version="1.0" encoding="utf-8"?>



<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/loadRoute"
        android:title="Byt rutt" />
    <item
        android:id="@+id/showDetails"
        android:title="Visa stop" />
    <item
        android:id="@+id/showRoute"
        android:title="Visa rutt på karta"/>
    <item
        android:id="@+id/dayVsNight"
        android:title="Visa mörk karta"/>
</menu>